chore: Update to Java 21